--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <span class="logo-icon">🦆</span>
+      <span class="logo-icon"></span>
       pdfduck
       <span class="badge">internal</span>
     </div>
