--- a/index.html
+++ b/index.html
@@ -459,8 +459,8 @@
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <img src="logo.png" alt="Logo" class="logo-img" height="26" style="vertical-align: middle; margin-right: 8px;"> pdfduck
-      <span class="badge">internal</span>
+      <img src="logo.png" alt="Logo" class="logo-img" height="26" style="vertical-align: middle; margin-right: 8px;">pdf<span style="color: yellow;">duck</span>
+      <span></span><span class="badge">internal</span>
     </div>
     <div class="api-status">
       <span class="status-dot" id="statusDot"></span>
