--- a/index.html
+++ b/index.html
@@ -459,9 +459,12 @@
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <img src="logo.png" alt="Logo" class="logo-img" height="26" style="vertical-align: middle; margin-right: 8px;">pdf<span style="color: yellow;">duck</span>
-      <span></span><span class="badge">internal</span>
-    </div>
+  <a href="/" class="logo-link" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+    <img src="logo.png" alt="Logo" class="logo-img" height="26" style="margin-right: 8px;">
+    pdf<span style="color: yellow;">duck</span>
+    </a>
+    <span class="badge" style="margin-left: 8px;">internal</span>
+</div>
     <div class="api-status">
       <span class="status-dot" id="statusDot"></span>
       <span id="statusText">checking...</span>
